--- a/jogo.html
+++ b/jogo.html
@@ -13,13 +13,23 @@
 <body>
 
     <div id="principal" class="container-fluid">
-        <h1>Aonde está o Smile?</h1>
-        <p>Tente adivinhar aonde está o Sorriso.</p>
-  
+      <div id="titulo">  
+        <h1>Aonde está o Grêmio?</h1>
+        <p>Tente adivinhar aonde está o Grêmio.</p>
+      </div>
       <div id="linha1" class="row justify-content-center">
         <div id="0" class="inicial" onclick="verifica(this)">0</div>
         <div id="1" class="inicial" onclick="verifica(this)">1</div>
         <div id="2" class="inicial" onclick="verifica(this)">2</div>
+        <div id="3" class="inicial" onclick="verifica(this)">3</div>
+        <div id="4" class="inicial" onclick="verifica(this)">4</div>
+        <div id="5" class="inicial" onclick="verifica(this)">5</div>
+        <div id="6" class="inicial" onclick="verifica(this)">6</div>
+        <div id="7" class="inicial" onclick="verifica(this)">7</div>
+        <div id="8" class="inicial" onclick="verifica(this)">8</div>
+        <div id="9" class="inicial" onclick="verifica(this)">9</div>
+        <div id="10" class="inicial" onclick="verifica(this)">10</div>
+        <div id="11" class="inicial" onclick="verifica(this)">11</div>
       </div>
       <div class="row justify-content-center" id="div1">
         <p id="resposta"></p>
