--- a/jogo.html
+++ b/jogo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aonde está o Smile?</title>
+    <title>Aonde está o Grêmio?</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <!-- Arquivo CSS -->
     <link rel="stylesheet" href="./css/estilo.css">
@@ -16,6 +16,7 @@
       <div id="titulo">  
         <h1>Aonde está o Grêmio?</h1>
         <p>Tente adivinhar aonde está o Grêmio.</p>
+        <h4>HARD LEVEL</h4>
       </div>
       <div id="linha1" class="row justify-content-center">
         <div id="0" class="inicial" onclick="verifica(this)">0</div>
