versão com sons e efeitos

--- a/jogo.html
+++ b/jogo.html
@@ -42,5 +42,9 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script> 
     <script src="./js/jogo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <audio id="som-gremio" src="https://www.myinstants.com/media/sounds/torcida-gremio.mp3"></audio>
+    <audio id="som-erro" src="https://www.myinstants.com/media/sounds/wrong-answer-sound-effect.mp3"></audio>
+    
   </body>
 </html>
