--- a/jogo.html
+++ b/jogo.html
@@ -39,6 +39,10 @@
         <button id="reiniciar" class="invisivel">Reiniciar</button>
       </div>
     </div>
+    <footer class="text-center text-white mt-5 p-3" style="background-color: #001f3f;">
+      <p>Filipe A. S. &copy; 2025</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script> 
